width fixing and wrapping

--- a/sass/includes/search/_search-results__list-card.scss
+++ b/sass/includes/search/_search-results__list-card.scss
@@ -33,7 +33,7 @@
 
     @media only screen and (min-width: 57rem) {
       margin-top: 0;
-        max-width:90%;
+        //max-width:90%;
     }
   }
 
